# enumclassbitset

./: CMakeLists.txt  LICENSE.md  README.md  enumclassbitset.hpp  enumclassbitsettest.cpp  example.cpp
