cmake_minimum_required(VERSION 2.8)
project(EnumClassBitset)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(example example.cpp)

option(BUILD_TEST "Build the test executable" OFF)
if (BUILD_TEST)
	find_package(Boost COMPONENTS unit_test_framework REQUIRED)
	link_directories(${Boost_LIBRARY_DIRS})
	include_directories(${Boost_INCLUDE_DIRS})
	enable_testing()
	add_executable(enumclassbitsettest enumclassbitsettest.cpp)
	set_property(SOURCE enumclassbitsettest.cpp APPEND PROPERTY COMPILE_DEFINITIONS BOOST_TEST_MAIN BOOST_TEST_DYN_LINK)
	target_link_libraries(enumclassbitsettest ${Boost_LIBRARIES})
	add_test(enumclassbitsettest enumclassbitsettest)
endif ()
